--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,6 @@ on:
     branches:
       - master
 
-env:
-  LOGIN_NAME: okadash
-
 jobs:
 
   # Build and push image to DockerHub.
@@ -23,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Log into registry
-        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${LOGIN_NAME:?no LOGIN_NAME} --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${DOCKERHUB_USER:?no DOCKERHUB_USER} --password-stdin
 
       - name: Build and push shells images
         run: |
@@ -36,7 +33,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Log into registry
-        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${LOGIN_NAME:?no LOGIN_NAME} --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${DOCKERHUB_USER:?no DOCKERHUB_USER} --password-stdin
 
       - name: Build and push shells images
         run: |
