--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Log into registry
-        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${{ secrets.DOCKERHUB_USER:?no DOCKERHUB_USER }} --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${{ secrets.DOCKERHUB_USER }} --password-stdin
 
       - name: Build and push shells images
         run: |
