--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build_and_check
+name: build
 
 on:
   push:
@@ -22,6 +22,21 @@ jobs:
       - name: Log into registry
         run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${{ secrets.DOCKERHUB_USER }} --password-stdin
 
-      - name: Build and push shells images
+      - name: check shells images build
         run: |
           ./build_image.sh
+
+  # Build and push image to DockerHub.
+  push_image:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Log into registry
+        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${{ secrets.DOCKERHUB_USER }} --password-stdin
+
+      - name: Build and push shells images
+        run: |
+          DOCKER_PUSHING=1 ./build_image.sh
