--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,10 @@ on:
     branches:
       - master
 
+env:
+  DOCKER_USERNAME: okadash
+  
+
 jobs:
 
   # Build images to DockerHub.
@@ -20,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Log into registry
-        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${{ secrets.DOCKERHUB_USER }} --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${DOCKER_USERNAME} --password-stdin
 
       - name: check shells images build
         run: |
@@ -35,7 +39,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Log into registry
-        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${{ secrets.DOCKERHUB_USER }} --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${DOCKER_USERNAME} --password-stdin
 
       - name: Build and push shells images
         run: |
