--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Log into registry
         run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${DOCKER_USERNAME} --password-stdin
 
-      - name: check shells images build
+      - name: check build script and make command line output
         run: |
           JUST_SAYING=1 ./build_image.sh
 
@@ -41,6 +41,6 @@ jobs:
       - name: Log into registry
         run: echo "${{ secrets.DOCKERHUB_SECRET }}" | docker login --username ${DOCKER_USERNAME} --password-stdin
 
-      - name: Build and push shells images
+      - name: Build and ship docker images
         run: |
           DOCKER_PUSHING=1 ./build_image.sh
